--- a/src/apps/promotions/promotion.html
+++ b/src/apps/promotions/promotion.html
@@ -3,6 +3,8 @@
     {{newItem}}
     <div>Desde {{item.desde}} - hasta {{item.hasta}}</div>
     <br/>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/es/promociones/{{item.href}}&layout=button_count&size=large&mobile_iframe=true&appId=1950796945206063&width=142&height=28" width="142" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    <br/>
     <div class="green-color">{{item.hashtags}}</div>
     <br/>
     <img src="/google/drive/promociones/{{system.deviceType}}.{{item.foto}}"/>
