--- a/src/apps/products/index.html
+++ b/src/apps/products/index.html
@@ -1,11 +1,11 @@
 <div #wrapper>
-    <div #top>
-        <span #cart></span> -
-        <a class="green-color" href="{{urls.cart}}" onclick="window.navigate(this, event)">
-            MI CESTA <span class="fa fa-shopping-cart"></span>
-        </a>
+
+    <div #menu>
+
     </div>
+
     <form #products>
 
     </form>
+
 </div>
