--- a/web-app-deploy/seo/es/home.html
+++ b/web-app-deploy/seo/es/home.html
@@ -3,6 +3,7 @@
     <nav>
         <a href="/es/tratamientos">TRATAMIENTOS</a>
         <a href="/es/tarjetas">TARJETAS</a>
+        <a href="/es/productos">PRODUCTOS</a>
         <a href="/es/promociones">PROMOCIONES</a>
         <a href="/es/citas">CITAS</a>
         <a href="/es/beauty-parties">BEAUTY PARTIES</a>
@@ -15,6 +16,7 @@
         <a href="/es/horario">NUESTRO HORARIO</a>
         <a href="/es/llmanos">LLAMANOS</a>
         <a href="/es/en-los-medios">EN LOS MEDIOS</a>
+        <a href="/es/buscar">BUSCAR</a>
     </nav>
 
     <img style="width: 100% !important;" data-src="/assets/images/slider-1.png" alt="In&Out centro de belleza en Malaga"/>
