--- a/src/apps/cart/empty-cart.html
+++ b/src/apps/cart/empty-cart.html
@@ -1,5 +1,5 @@
 <form>
-    <h3>NO HAY PRODUCTOS EN LA CESTA</h3>
+    <h3>NO HAY COMPRAS EN LA CESTA</h3>
     <p>para añadir productos puedes irte a:</p>
 
     <div #icons></div>
