--- a/src/apps/treatments/treatment.html
+++ b/src/apps/treatments/treatment.html
@@ -10,11 +10,11 @@
     <div style="font-size: 12px;margin: 10px;text-align: justify;">{{item.descripcion}}</div>
     <div>{{item.precio_texto}}</div>
     <input onclick="this.form.add('{{item.identificador}}');"
-            style="position: absolute;right: 9px;bottom: 5px; display:{{bookDisplay}};"
+            style="position: absolute;right: 9px;bottom: 5px; display:{{addToCartDisplay}};"
             class="clickable button green-bg-color white-color"
             type="button" value="{{addToCartButton}}" />
     <input onclick="this.form.book('{{item.identificador}}');"
-            style="position: relative; bottom: -5px; display:{{bookDisplay}};"
+            style="position: relative; bottom: -5px; display:{{bookDisplay}}; min-width: 100px"
             class="clickable button green-bg-color white-color"
             type="button" value="{{bookButton}}" />
     <a style="position: absolute;right: 9px;bottom: 5px; display: {{callDisplay}};"
