some improvements - posts from old website

--- a/src/apps/beautycorner/index.html
+++ b/src/apps/beautycorner/index.html
@@ -3,7 +3,7 @@
     <div class="box">
         <img #image0/>
     </div>
-    <p>
+    <p style="text-align: justify;">
         {{paragraph1}}
     </p>
     <a #location1 class="button clickable white-color green-bg-color fa fa-phone" href="tel:{{location1Phone}}">
@@ -12,7 +12,7 @@
     <div class="box">
         <img #image1/>
     </div>
-    <p>
+    <p style="text-align: justify;">
         {{paragraph2}}
     </p>
     <div class="box">
