--- a/src/apps/bookings/index.html
+++ b/src/apps/bookings/index.html
@@ -18,7 +18,7 @@
         </div>
         <hr/>
 
-        <a href="{{urls.treatments}}" onclick="window.navigate(this)"><h3>{{title1}}</h3></a>
+        <a href="{{urls.treatments}}" onclick="window.navigate(this, event)"><h3>{{title1}}</h3></a>
         <div #treatments></div>
 
         <hr/>
