--- a/src/apps/callUs/index.html
+++ b/src/apps/callUs/index.html
@@ -9,7 +9,7 @@
         <br/>
         <table>
             <tr><td>Tel:</td><td>{{location1Phone}}</td></tr>
-            <tr><td>Mobile:</td><td>{{location1Mobile}} <span class="fa fa-whatsapp"></span> </td></tr>
+            <tr><td>Móvil:</td><td>{{location1Mobile}} <span class="fa fa-whatsapp"></span> </td></tr>
         </table>
         <hr/>
         <a #location1 class="button clickable white-color green-bg-color fa fa-phone" href="tel:{{location1Phone}}">
@@ -22,7 +22,7 @@
         <br/>
         <table>
             <tr><td>Tel:</td><td>{{location2Phone}}</td></tr>
-            <tr><td>Mobile:</td><td>{{location2Mobile}}</td></tr>
+            <tr><td>Móvil:</td><td>{{location2Mobile}}</td></tr>
         </table>
         <hr/>
         <a #location2 class="button clickable white-color green-bg-color fa fa-phone" href="tel:{{location2Phone}}">
