--- a/src/apps/cart/buy.html
+++ b/src/apps/cart/buy.html
@@ -15,6 +15,6 @@
     </p>
     <p>
         {{buy.homePage}}
-        <a href="{{urls.home}}" onclick="window.navigate(this)">{{buy.buttonHome}}</a>
+        <a href="{{urls.home}}" onclick="window.navigate(this, event)">{{buy.buttonHome}}</a>
     </p>
 </div>
