--- a/src/apps/press/press.html
+++ b/src/apps/press/press.html
@@ -7,7 +7,7 @@
     <br/>
     <img src="/google/drive/press/{{system.deviceType}}.{{item.foto}}"/>
     <br/> <br/>
-    <div>
+    <div style="text-align: justify;">
         {{item.descripcion}}
     </div>
 </div>
