--- a/src/apps/products/index.html
+++ b/src/apps/products/index.html
@@ -1,7 +1,7 @@
 <div #wrapper>
     <div #top>
         <span #cart></span> -
-        <a class="green-color" href="{{urls.cart}}" onclick="window.navigate(this)">
+        <a class="green-color" href="{{urls.cart}}" onclick="window.navigate(this, event)">
             MI CESTA <span class="fa fa-shopping-cart"></span>
         </a>
     </div>
