--- a/src/apps/promotions/promotion.html
+++ b/src/apps/promotions/promotion.html
@@ -9,7 +9,7 @@
     <br/>
     <img src="/google/drive/promociones/{{system.deviceType}}.{{item.foto}}"/>
     <br/> <br/>
-    <div>
+    <div style="text-align: justify;">
         {{item.descripcion}}
     </div>
     <br/>
