--- a/src/apps/treatments/menuItemButton.html
+++ b/src/apps/treatments/menuItemButton.html
@@ -1,5 +1,5 @@
 <a href="{{urls.treatments}}/{{path}}"
-   onclick="window.navigate(this)"
+   onclick="window.navigate(this, event)"
    style="display: block; text-decoration: none"
    class="apply-transform-transition white-bg-color menu-item green-color dark-grey-border-color">
     {{item}}
