--- a/src/common/createAnAccount.html
+++ b/src/common/createAnAccount.html
@@ -8,7 +8,7 @@
         <li>{{createAnAccount.item-list4}}</li>
     </ol>
     <br/>
-    <a href="{{urls.login}}" onclick="window.navigate(this)">{{createAnAccount.loginButton}}</a>
+    <a href="{{urls.login}}" onclick="window.navigate(this, event)">{{createAnAccount.loginButton}}</a>
     <br/><br/>
-    <a href="{{urls.register}}" onclick="window.navigate(this)">{{createAnAccount.registerButton}}</a>
+    <a href="{{urls.register}}" onclick="window.navigate(this, event)">{{createAnAccount.registerButton}}</a>
 </div>
