--- a/src/apps/beautyparties/index.html
+++ b/src/apps/beautyparties/index.html
@@ -1,9 +1,9 @@
 <div #wrapper>
     <h3>{{title1}}</h3>
-    <p>
+    <p style="text-align: justify;">
         {{paragraph1}}
     </p>
-    <p>
+    <p style="text-align: justify;">
         {{paragraph2}}
     </p>
     <h3>
@@ -12,7 +12,7 @@
     <div #packs>
 
     </div>
-    <p>
+    <p style="text-align: justify;">
         {{paragraph3}}
     </p>
 
