--- a/src/apps/bookings/no-treatments.html
+++ b/src/apps/bookings/no-treatments.html
@@ -1,7 +1,7 @@
 <form>
     <h3>AUN NO TIENES TRATAMIETOS PREFERIDOS?</h3>
     <p>para añadirlos vete a:</p>
-    <a href="/es/tratamientos" onclick="window.navigate(this)" class="clickable"
+    <a href="/es/tratamientos" onclick="window.navigate(this, event)" class="clickable"
        style="position: relative; display: inline-block; width: 60px; height: 60px; margin: 10px 20px; text-align: center; cursor: pointer; vertical-align: middle; text-decoration: none; pointer-events: all;">
         <div class="c100 p50 big"
              style="position: absolute; z-index: 3; left: 0px; right: 0px; top: 0px; bottom: 0px; background-color: black; border-radius: 12px; opacity: 0.6; color: white; padding: 14px 0px; display: none;">
