--- a/src/apps/reviews/review.html
+++ b/src/apps/reviews/review.html
@@ -4,5 +4,5 @@
         Valoracíon: {{stars}}
     </div>
     <br/>
-    <div><em>{{item.description}}</em></div>
+    <div style="text-align: justify;"><em>{{item.description}}</em></div>
 </div>
