--- a/src/apps/treatments/menuListButton.html
+++ b/src/apps/treatments/menuListButton.html
@@ -1,4 +1,4 @@
 <a style="display: none" href="{{urls.treatments}}"
-   onclick="window.navigate(this)"
+   onclick="window.navigate(this, event)"
    class="menu-button menu-item green-color dark-grey-border-color">
 </a>
