--- a/web-app-deploy/seo/index.html
+++ b/web-app-deploy/seo/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es"/>
-    <meta name="author" content="Massimiliano Cattaneo">
-    <meta name="designer" content="Massimiliano Cattaneo">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon.png"
@@ -18,20 +15,20 @@
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png"
           sizes="144x144" rel="apple-touch-icon-precomposed">
     <meta name="description"
-          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
+          content="{{description}}">
     <meta name="robots" content="noodp">
     <link rel="canonical" href="https://www.inandoutbelleza.es/">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+    <meta property="og:title" content="{{title}}">
     <meta property="og:description"
-          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
+          content="{{description}}">
     <meta property="og:url" content="https://www.inandoutbelleza.es/">
     <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
-          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
-    <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+          content="{{description}}">
+    <meta name="twitter:title" content="{{title}}">
     <meta name="twitter:site" content="@bellezainandout">
     <meta name="twitter:image"
           content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
