--- a/src/apps/press/press.html
+++ b/src/apps/press/press.html
@@ -5,7 +5,8 @@
     <br/>
     <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/es/en-los-medios/{{item.href}}&layout=button_count&size=large&mobile_iframe=true&appId=1950796945206063&width=142&height=28" width="142" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <br/>
-    <img src="/google/drive/press/{{system.deviceType}}.{{item.foto}}"/>
+    <img src="/google/drive/en-los-medios/{{system.deviceType}}.{{item.foto}}"
+        alt="{{item.titulo}}" title="{{item.titulo}}" />
     <br/> <br/>
     <div style="text-align: justify;">
         {{item.descripcion}}
