--- a/src/apps/promotions/promotion.html
+++ b/src/apps/promotions/promotion.html
@@ -7,7 +7,8 @@
     <br/>
     <div class="green-color">{{item.hashtags}}</div>
     <br/>
-    <img src="/google/drive/promociones/{{system.deviceType}}.{{item.foto}}"/>
+    <img src="/google/drive/promociones/{{system.deviceType}}.{{item.foto}}"
+         alt="{{item.titulo}}" title="{{item.titulo}}" />
     <br/> <br/>
     <div style="text-align: justify;">
         {{item.descripcion}}
