--- a/src/apps/team/worker.html
+++ b/src/apps/team/worker.html
@@ -1,5 +1,6 @@
 <div class="box" style="text-align: center;">
     <h2 class="green-color">{{name}}</h2>
     {{description}}
-    <img src="{{imageUrl}}" style="max-width: 320px;"/>
+    <img src="{{imageUrl}}" style="max-width: 320px;"
+        alt="In and out belleza Málaga - {{name}}" title="In and out belleza Málaga - {{name}}"/>
 </div>
