--- a/web-app-deploy/seo/es/beautyparties.html
+++ b/web-app-deploy/seo/es/beautyparties.html
@@ -14,7 +14,7 @@
                     <li>Manicura</li>
                 </ul>
                 <br> 40,00 € <a class="button clickable white-color green-bg-color fa fa-phone" href="tel:">
-                    LLAMANOS </a> <img src="/google/drive/beautyparties/desktop.makupparty.jpg"
+                    LLAMANOS </a> <img data-src="/google/drive/beautyparties/desktop.makupparty.jpg"
                                        style="border-radius: 20px;margin: 20px 5% 0 5%;width: 90%;"></div>
             <div class="box"><h3>Pack <span>Basic</span></h3>
                 <ul>
@@ -25,7 +25,7 @@
                     <li>Sesión de presoterapia</li>
                 </ul>
                 <br> 40,00 € <a class="button clickable white-color green-bg-color fa fa-phone" href="tel:">
-                    LLAMANOS </a> <img src="/google/drive/beautyparties/desktop.packbasic.jpg"
+                    LLAMANOS </a> <img data-src="/google/drive/beautyparties/desktop.packbasic.jpg"
                                        style="border-radius: 20px;margin: 20px 5% 0 5%;width: 90%;"></div>
             <div class="box"><h3>Pack <span>Star</span></h3>
                 <ul>
@@ -40,7 +40,7 @@
                     <li>Tinte de pestañas</li>
                 </ul>
                 <br> 60,00 € <a class="button clickable white-color green-bg-color fa fa-phone" href="tel:">
-                    LLAMANOS </a> <img src="/google/drive/beautyparties/desktop.packstar.jpg"
+                    LLAMANOS </a> <img data-src="/google/drive/beautyparties/desktop.packstar.jpg"
                                        style="border-radius: 20px;margin: 20px 5% 0 5%;width: 90%;"></div>
             <div class="box"><h3>Pack <span>Beauty</span></h3>
                 <ul>
@@ -53,7 +53,7 @@
                     <li>Hidratación de manos con parafina</li>
                 </ul>
                 <br> 50,00 € <a class="button clickable white-color green-bg-color fa fa-phone" href="tel:">
-                    LLAMANOS </a> <img src="/google/drive/beautyparties/desktop.packbeauty.jpg"
+                    LLAMANOS </a> <img data-src="/google/drive/beautyparties/desktop.packbeauty.jpg"
                                        style="border-radius: 20px;margin: 20px 5% 0 5%;width: 90%;"></div>
         </div>
         <p> Además de estos packs, también te ofrecemos la posibilidad de diseñar vuestro pack personalizado en base
