--- a/web-app-deploy/seo/es/home.html
+++ b/web-app-deploy/seo/es/home.html
@@ -1,5 +1,22 @@
 <div>
     <h1>In&Out centro de belleza en Malaga</h1>
+    <nav>
+        <a href="/es/tratamientos">TRATAMIENTOS</a>
+        <a href="/es/tarjetas">TARJETAS</a>
+        <a href="/es/promociones">PROMOCIONES</a>
+        <a href="/es/citas">CITAS</a>
+        <a href="/es/beauty-parties">BEAUTY PARTIES</a>
+        <a href="/es/beauty-corner">BEAUTY CORNER</a>
+        <a href="/es/inandout-go">IN&OUT GO</a>
+        <a href="/es/novedades">NOVEDADES</a>
+        <a href="/es/fotos">FOTOS</a>
+        <a href="/es/medidor">MEDIDOR DE CEJAS</a>
+        <a href="/es/equipo">EQUIPO</a>
+        <a href="/es/horario">NUESTRO HORARIO</a>
+        <a href="/es/llmanos">LLAMANOS</a>
+        <a href="/es/en-los-medios">EN LOS MEDIOS</a>
+    </nav>
+    <img style="width: 100% !important;" data-src="/assets/images/slider-1.png" alt="In&Out centro de belleza en Malaga"/>
     <p>
         In&Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en
         Málaga y con una larga trayectoria que nos avalan en tratamientos faciales, tratamientos corporales, masajes y
@@ -24,24 +41,71 @@
     Desde la presoterapia pasando por las velas smooth hasta llegar a la radiofrecuencia, son solo algunas muestras de
     lo que puedes encontrar en tu centro de belleza de Málaga In&Out
     </p>
-    <nav>
-        <a href="/es/tratamientos">TRATAMIENTOS</a>
-        <a href="/es/tarjetas">TARJETAS</a>
-        <a href="/es/promociones">PROMOCIONES</a>
-        <a href="/es/citas">CITAS</a>
-        <a href="/es/beauty-parties">BEAUTY PARTIES</a>
-        <a href="/es/beauty-corner">BEAUTY CORNER</a>
-        <a href="/es/inandout-go">IN&OUT GO</a>
-        <a href="/es/novedades">NOVEDADES</a>
-        <a href="/es/fotos">FOTOS</a>
-        <a href="/es/medidor">MEDIDOR DE CEJAS</a>
-        <a href="/es/equipo">EQUIPO</a>
-        <a href="/es/horario">NUESTRO HORARIO</a>
-        <a href="/es/llmanos">LLAMANOS</a>
-        <a href="/es/en-los-medios">EN LOS MEDIOS</a>
-    </nav>
-    <ul>
-        <li><i class="fa fa-phone"></i>C/ Salitre, 11:<span> T. 951 131 460  ·  M. 633 90 91 03</span></li>
-        <li><i class="fa fa-phone"></i>C/ Compañia, 42:<span> T. 951 387 919  ·  M. 695 685 291 </span></li>
-    </ul>
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "BeautySalon",
+      "url": "https://www.inandoutbelleza.es",
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "telephone": "+34 951 131 460",
+        "contactType": "Calle Salitre, 11",
+        "areaServed": "ES"
+      },{
+        "@type": "ContactPoint",
+        "telephone": "+34 951 387 919",
+        "contactType": "Calle Compañia, 142",
+        "areaServed": "ES"
+      }],
+      "logo": "https://www.inandoutbelleza.es/assets/images/manzana.png",
+      "sameAs": [
+        "https://www.facebook.com/inandoutbelleza",
+        "https://www.instagram.com/inandoutmalaga/"
+      ],
+      "image": [
+    "https://www.inandoutbelleza.es/assets/images/manzana.png"
+   ],
+  "@id": "https://www.inandoutbelleza.es",
+  "name": "In&Out Belleza - centro de belleza en Málaga",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Calle Salitre, 11",
+    "addressLocality": "Málaga",
+    "postalCode": "29008",
+    "addressCountry": "ES"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 36.7137894,
+    "longitude": -4.4268794
+  },
+  "url": "https://www.inandoutbelleza.es",
+  "telephone": "+34 951 387 919",
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "10:00",
+      "closes": "20:00"
+    },
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": "Saturday",
+      "opens": "9:30",
+      "closes": "14:30"
+    }
+  ],
+  "menu": "https://www.inandoutbelleza.es/assets/images/tarifa_de_precios.pdf",
+  "acceptsReservations": "True"
+    }
+
+    </script>
+
 </div>
