--- a/web-app-deploy/seo/es/inandoutgo.html
+++ b/web-app-deploy/seo/es/inandoutgo.html
@@ -1,16 +1,25 @@
 <div style="margin: 10px;">
     <div style="width: 100%;"><h3>NUESTRO CENTRO DONDE TU QUIERAS</h3>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-2.jpg"></div>
+        <div class="box"><img
+                title="In and Out centro de belleza y beauty en Málaga y Marbella"
+                alt="Para tener tu propio servicio estético a domicilio en Málaga y Marbella"
+                data-src="/google/drive/inandoutgo/desktop.in-and-out-go-fuengirola.jpg"></div>
         <p> Para tener tu propio servicio estético a domicilio con <span class="green-color">In&amp;Out Go</span> puedes
             ponerte en contacto con In&amp;Out e indicarnos la fecha en la que necesitarías disponer de este
             servicio.<br><br>El precio del servicio <span class="green-color">In&amp;Out Go</span> dependerá de los
             servicios que deseas contratar. </p>    <a class="button clickable white-color green-bg-color fa fa-phone"
                                                        href="tel:951 131 460"> LLAMANOS </a>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-3.jpg"></div>
+        <div class="box"><img
+                title="In and Out centro de belleza y beauty en Málaga y Marbella"
+                alt="Para tener tu propio servicio estético a domicilio en Málaga y Marbella"
+                data-src="/google/drive/inandoutgo/desktop.in-and-out-go-marbella.jpg"></div>
         <p> Si ya podemos pedir cualquier tipo de servicio a domicilio… ¿por qué no ponernos guapas con grandes
             profesionales desde la comodidad de nuestro hogar?<br><br>In&amp;Out trae para ti el novedoso servicio <span
                     class="green-color">In&amp;Out Go</span> con el que trasladamos nuestro centro de estética al salón
             de tu casa, el tiempo ya no será excusa para mimarte y cuidarte. </p>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-1.jpg"></div>
+        <div class="box"><img
+                title="In and Out centro de belleza y beauty en Málaga y Marbella"
+                alt="Para tener tu propio servicio estético a domicilio en Málaga y Marbella"
+                data-src="/google/drive/inandoutgo/desktop.in-and-out-go-malaga.jpg"></div>
     </div>
 </div>
