--- a/src/apps/beautyparties/pack.html
+++ b/src/apps/beautyparties/pack.html
@@ -11,5 +11,7 @@
         {{call-button}}
     </a>
     <img src="/google/drive/beautyparties/{{system.deviceType}}.{{item.foto}}"
+         title="{{item.titulo}}"
+         alt="{{item.tratamientos}} - {{precio_texto}}"
          style="border-radius: 20px;margin: 20px 5% 0 5%;width: 90%;" />
 </div>
