--- a/web-app-deploy/seo/es/photoMeasure.html
+++ b/web-app-deploy/seo/es/photoMeasure.html
@@ -1,16 +1,16 @@
-<div style="margin: 10px;">
-    <div style="width: 100%;"><h3>NUESTRO CENTRO DONDE TU QUIERAS</h3>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-2.jpg"></div>
-        <p> Para tener tu propio servicio estético a domicilio con <span class="green-color">In&amp;Out Go</span> puedes
-            ponerte en contacto con In&amp;Out e indicarnos la fecha en la que necesitarías disponer de este
-            servicio.<br><br>El precio del servicio <span class="green-color">In&amp;Out Go</span> dependerá de los
-            servicios que deseas contratar. </p>    <a class="button clickable white-color green-bg-color fa fa-phone"
-                                                       href="tel:951 131 460"> LLAMANOS </a>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-3.jpg"></div>
-        <p> Si ya podemos pedir cualquier tipo de servicio a domicilio… ¿por qué no ponernos guapas con grandes
-            profesionales desde la comodidad de nuestro hogar?<br><br>In&amp;Out trae para ti el novedoso servicio <span
-                    class="green-color">In&amp;Out Go</span> con el que trasladamos nuestro centro de estética al salón
-            de tu casa, el tiempo ya no será excusa para mimarte y cuidarte. </p>
-        <div class="box"><img src="/google/drive/inandoutgo/desktop.image-1.jpg"></div>
+<div style="max-height: 100%; overflow: auto;">
+    <div style="margin: 10px;">
+        <div>
+            <div><h3>?AUN NO TIENES UNA CUENTA?</h3>
+                <p>Crea tu nueva cuenta para:</p>
+                <ol>
+                    <li>RESERVAR TU CITA ONLINE</li>
+                    <li>UTILIZAR EL MEDIDOR DE CEJAS</li>
+                    <li>DEJAR UN COMENTARIO SOBRE NOSOTROS</li>
+                    <li>Y MUCHO MAS ...</li>
+                </ol>
+                <br> <a href="/es/cuenta/entrar">YA TENGO UNA CUENTA</a> <br><br> <a
+                        href="/es/cuenta/crear">QUIERO CREAR UNA CUENTA</a></div>
+        </div>
     </div>
 </div>
