--- a/web-app-deploy/seo/es/team.html
+++ b/web-app-deploy/seo/es/team.html
@@ -3,17 +3,17 @@
         Cada una de ellas es especialista en un área y entre sus manos te sentirás como en casa. </p>
     <div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Carmen Mellado</h2>
-            <p>Especialista Depilación con Hilo</p>    <img src="/google/drive/team/desktop.CarmenMellado.jpg"
+            <p>Especialista Depilación con Hilo</p>    <img data-src="/google/drive/team/desktop.CarmenMellado.jpg"
                                                             style="max-width: 320px;"></div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Carmen Vela</h2>
-            <p></p>    <img src="/google/drive/team/desktop.CarmenVela.jpg" style="max-width: 320px;"></div>
+            <p></p>    <img data-src="/google/drive/team/desktop.CarmenVela.jpg" style="max-width: 320px;"></div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Estefanía Vera</h2>
-            <p></p>    <img src="/google/drive/team/desktop.EstefaniaVera.jpg" style="max-width: 320px;"></div>
+            <p></p>    <img data-src="/google/drive/team/desktop.EstefaniaVera.jpg" style="max-width: 320px;"></div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Cristina Román</h2>
-            <p></p>    <img src="/google/drive/team/desktop.CristinaRoman.jpg" style="max-width: 320px;"></div>
+            <p></p>    <img data-src="/google/drive/team/desktop.CristinaRoman.jpg" style="max-width: 320px;"></div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Eila Jurado</h2>
-            <p></p>    <img src="/google/drive/team/desktop.EilaJurado.jpg" style="max-width: 320px;"></div>
+            <p></p>    <img data-src="/google/drive/team/desktop.EilaJurado.jpg" style="max-width: 320px;"></div>
         <div class="box" style="text-align: center;"><h2 class="green-color">Vanesa</h2>
-            <p></p>    <img src="/google/drive/team/desktop.Vanesa.jpg" style="max-width: 320px;"></div>
+            <p></p>    <img data-src="/google/drive/team/desktop.Vanesa.jpg" style="max-width: 320px;"></div>
     </div>
 </div>
