--- a/src/apps/bookings/index.html
+++ b/src/apps/bookings/index.html
@@ -1,13 +1,10 @@
 <div #wrapper>
     <form #booking>
-        <output class="text-checkbox" onclick="this.form.goToCenter(0)">
-            <input type="radio" name="center" checked id="center_1" />
-            <label class="clickable" for="center_1">{{center}} {{location1AddressLabel}}</label>
-        </output>
-        <output class="text-checkbox" onclick="this.form.goToCenter(1)">
-            <input type="radio" name="center" id="center_2" />
-            <label class="clickable" for="center_2">{{center}} {{location2AddressLabel}}</label>
-        </output>
+        <div #centers>
+
+        </div>
+
+
 
         <hr/>
 
