--- a/src/apps/location/index.html
+++ b/src/apps/location/index.html
@@ -10,22 +10,24 @@
         <br/>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.365204032548!2d-4.429068084181276!3d36.71378937996639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f790f163b407%3A0xbee3ebf8e48a93d3!2sCalle+Salitre%2C+11%2C+29002+M%C3%A1laga!5e0!3m2!1sit!2ses!4v1511978401758"
                 width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <a #location1 class="button clickable white-color green-bg-color fa fa-map"
+        <a class="button clickable white-color green-bg-color fa fa-map"
            href="http://maps.apple.com/?q={{location1Latitude}},{{location1Longitude}}">
             {{buttonText}}
         </a>
     </div>
     <div class="box">
-        {{location2Address}}
+        {{location3Address}}
         <br/>
         <br/>
         {{parkingDiscount}}
         <br/>
         <br/>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2257.0730586613836!2d-4.426167376917535!3d36.72130207839323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7bdf55b79c5%3A0x33eb205e2f802fe6!2zQ2FsbGUgQ29tcGHDscOtYSwgNDIsIDI5MDA4IE3DoWxhZ2E!5e0!3m2!1sit!2ses!4v1511978031775"
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.9411753129752!2d-4.422770684553141!3d36.723973979964335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7bfac7a0c33%3A0xa6cc74736e7c57d!2sCalle+Puerta+Buenaventura%2C+4%2C+29008+M%C3%A1laga!5e0!3m2!1sit!2ses!4v1528916369205"
                 width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <a #location2 class="button clickable white-color green-bg-color fa fa-map"
-           href="http://maps.apple.com/?q={{location1Latitude}},{{location1Longitude}}">
+
+        <a class="button clickable white-color green-bg-color fa fa-map"
+           href="http://maps.apple.com/?q={{location3Latitude}},{{location3Longitude}}">
             {{buttonText}}
         </a>
     </div>
