--- a/src/apps/bookings/index.html
+++ b/src/apps/bookings/index.html
@@ -22,12 +22,13 @@
 
         <h3>{{title2}}</h3>
         <div #hours>
+
         </div>
 
         <hr/>
 
         <div style="text-align: center">
-            <input type="button" onclick="this.form.book()"
+            <input #book type="button" onclick="this.form.book()"
                    class="clickable button green-bg-color white-color" value="{{confirm}}" />
         </div>
     </form>
