--- a/web-app-deploy/seo/es/home.html
+++ b/web-app-deploy/seo/es/home.html
@@ -16,7 +16,13 @@
         <a href="/es/llmanos">LLAMANOS</a>
         <a href="/es/en-los-medios">EN LOS MEDIOS</a>
     </nav>
+
     <img style="width: 100% !important;" data-src="/assets/images/slider-1.png" alt="In&Out centro de belleza en Malaga"/>
+    <img style="width: 20% !important;" data-src="/assets/images/carita-paris-malaga-venta-productos-beauty-center.png" alt="Carita Paris en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+    <img style="width: 20% !important;" data-src="/assets/images/decleor-paris-productos-venta-malaga.png" alt="Decleor Paris en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+    <img style="width: 20% !important;" data-src="/assets/images/mama-mio-productos-venta-malaga-beauty-center.png" alt="Mama Mio en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+    <img style="width: 20% !important;" data-src="/assets/images/fedua-malaga-venta-productos-beauty-center.png" alt="Mama Mio en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+    <img style="width: 20% !important;" data-src="/assets/images/opi-malaga-esmaltes-venta.png" alt="Fedua en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
     <p>
         In&Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en
         Málaga y con una larga trayectoria que nos avalan en tratamientos faciales, tratamientos corporales, masajes y
