--- a/src/apps/callUs/index.html
+++ b/src/apps/callUs/index.html
@@ -8,8 +8,8 @@
         <br/>
         <br/>
         <table>
-            <tr><td>Tel:</td><td>{{location1Phone}}</td></tr>
-            <tr><td>Móvil:</td><td>{{location1Mobile}} <span class="fa fa-whatsapp"></span> </td></tr>
+            <tr><td>{{telephone}}</td><td>{{location1Phone}}</td></tr>
+            <tr><td>{{cellular}}</td><td>{{location1Mobile}} <span class="fa fa-whatsapp"></span> </td></tr>
         </table>
         <hr/>
         <a #location1 class="button clickable white-color green-bg-color fa fa-phone" href="tel:{{location1Phone}}">
@@ -21,8 +21,8 @@
         <br/>
         <br/>
         <table>
-            <tr><td>Tel:</td><td>{{location3Phone}}</td></tr>
-            <tr><td>Móvil:</td><td>{{location3Mobile}}</td></tr>
+            <tr><td>{{telephone}}</td><td>{{location3Phone}}</td></tr>
+            <tr><td>{{cellular}}</td><td>{{location3Mobile}}</td></tr>
         </table>
         <hr/>
         <a #location1 class="button clickable white-color green-bg-color fa fa-phone" href="tel:{{location3Phone}}">
