--- a/src/apps/cart/empty-cart.html
+++ b/src/apps/cart/empty-cart.html
@@ -1,6 +1,6 @@
 <form>
-    <h3>NO HAY COMPRAS EN LA CESTA</h3>
-    <p>para añadir productos puedes irte a:</p>
+    <h3>{{emptyCart.noProducts}}</h3>
+    <p>{{emptyCart.goTo}}</p>
 
     <div #icons></div>
 
