--- a/src/apps/login/index.html
+++ b/src/apps/login/index.html
@@ -1,3 +1,12 @@
 <div #wrapper>
-
+    <div class="box">
+        {{changeLanguage}}
+        <a #en href="/en">
+            <img #english src="/assets/images/en.png"/>
+        </a>
+        <a #es href="/es">
+            <img #spanish src="/assets/images/es.png"/>
+        </a>
+    </div>
+    <div #container></div>
 </div>
