--- a/src/apps/promotions/promotion.html
+++ b/src/apps/promotions/promotion.html
@@ -3,7 +3,7 @@
     {{newItem}}
     <div>Desde {{item.desde}} - hasta {{item.hasta}}</div>
     <br/>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/es/promociones/{{item.href}}&layout=button&size=large&mobile_iframe=false&appId=1950796945206063&width=96&height=28"
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/{{system.info.lang}}/promociones/{{item.href}}&layout=button&size=large&mobile_iframe=false&appId=1950796945206063&width=96&height=28"
             width="96" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <br/>
     <div class="green-color">{{item.hashtags}}</div>
