--- a/src/apps/bookings/no-treatments.html
+++ b/src/apps/bookings/no-treatments.html
@@ -1,24 +1,17 @@
 <form>
-    <h3>AUN NO TIENES TRATAMIETOS PREFERIDOS?</h3>
-    <p>para añadirlos vete a:</p>
-    <a href="/es/tratamientos" onclick="window.navigate(this, event)" class="clickable"
+    <h3>{{noTreatsTitle}}</h3>
+    <p>{{noTreatsExplanation}}</p>
+    <a href="{{urls.treatments}}" onclick="window.navigate(this, event)" class="clickable"
        style="position: relative; display: inline-block; width: 60px; height: 60px; margin: 10px 20px; text-align: center; cursor: pointer; vertical-align: middle; text-decoration: none; pointer-events: all;">
-        <div class="c100 p50 big"
-             style="position: absolute; z-index: 3; left: 0px; right: 0px; top: 0px; bottom: 0px; background-color: black; border-radius: 12px; opacity: 0.6; color: white; padding: 14px 0px; display: none;">
-            LOADING
-            100%
-        </div>
-        <div class="green-color flaticon-treatments" style="font-size: 45px; opacity: 0.8;"><span class="icon-notify"
-                                                                                                  style="color: white; display: none;">!</span>
-        </div>
+        <div class="green-color flaticon-treatments" style="font-size: 45px; opacity: 0.8;"></div>
         <div class="dark-grey-color"
-             style="font-size: 14px; height: 20px; position: absolute; left: -16px; width: 96px;">TRATAMIENTOS
+             style="font-size: 14px; height: 20px; position: absolute; left: -16px; width: 96px;">{{noTreatsIcon}}
         </div>
     </a>
 
     <br/><br/>
     <p>
-        Y pulsa las estrellas
+        {{noTreatsStars}}
         <span style="display: inline-block" class="text-checkbox">
             <input type="checkbox">
             <label class="clickable fa fa-star-o"></label>    </span>
