--- a/src/apps/cart/cart.html
+++ b/src/apps/cart/cart.html
@@ -11,7 +11,7 @@
             </tr>
             <tr style="display: {{hasProducts}}">
                 <td colspan="2" style="text-align: right">
-                    ENVIO (gratis a partir de {{freeChargeLimit}}):
+                    {{freeShipping}}
                 </td>
                 <td style="text-align: right">
                     {{costs}}
@@ -19,7 +19,7 @@
             </tr>
             <tr style="display: {{hasProducts}}; font-size: 12px; text-align: right">
                 <td colspan="2">
-                    Los gastos de envio se calculan a partir del total ({{totalProducts}}) de los productos.
+                    {{howToCalculate}}
                 </td>
                 <td>&nbsp;</td>
             </tr>
@@ -41,7 +41,7 @@
                 </td>
             </tr>
             <tr>
-                <td style="text-align: right">TOTAL A PAGAR:</td>
+                <td style="text-align: right">{{totalToPay}}</td>
                 <td colspan="2" style="text-align: right">
                     {{total}}
                 </td>
@@ -49,8 +49,8 @@
         </table>
     </div>
     <div class="box">
-        <em class="green-color">En el correo te enviaremo un resumen de los gastos y un PDF que podras utilizar como regalo</em><br/>
-        <label>ENVIA LA CONFIRMACION A ESTE CORREO:</label>
+        <em class="green-color">{{emailSummary}}</em><br/>
+        <label>{{sendEmailLabel}}</label>
         <input #email name="email" value="{{userEmail}}" type="email"/>
         <br/><br/>
         <div style="display: {{showPrivacy}};">
@@ -63,33 +63,33 @@
         <div style="clear: both;"></div>
     </div>
     <div class="box" style="display: {{hasProducts}}">
-        <em class="green-color">Se hacen envios solo en España</em><br/>
-        <em style="font-size: 12px">Los productos se entregaran en un <strong>maximo de 5 dias laborables</strong></em><br/>
-        <h4>ENVIAME LOS PRODUCTOS AQUÍ:</h4>
-        <label for="name">NOMBRE Y APPELIDO:</label>
+        <em class="green-color">{{onlySpain}}</em><br/>
+        <em style="font-size: 12px">{{shippingTime}}</em><br/>
+        <h4>{{shippindAddress}}</h4>
+        <label for="name">{{nameSurname}}</label>
         <input #name id="name" name="name" type="text"/><br/>
-        <label for="address">DIRECCIÓN:</label>
+        <label for="address">{{address}}</label>
         <input #address id="address" name="address" type="text"/><br/>
-        <label for="city">POBLACION:</label>
+        <label for="city">{{city}}</label>
         <input #city id="city" name="city" type="text"/><br/>
-        <label for="cap">CODIGO POSTAL:</label>
+        <label for="cap">{{cap}}</label>
         <input #cap id="cap" name="cap" type="text"/>
         <br/>
-        <label for="cap">TELEFONO:</label>
+        <label for="cap">{{phone}}</label>
         <input #tel id="tel" name="tel" type="tel"/>
         <br/>
-        <h4>ES UN REGALO?</h4>
+        <h4>{{isGift}}</h4>
         <div class="text-checkbox">
             <input id="noGift" name="gift" type="radio" value="0" checked/>
-            <label for="noGift">NO</label>
+            <label for="noGift">{{no}}</label>
         </div>
         <div class="text-checkbox">
             <input id="totalGift" name="gift" type="radio" value="1"/>
-            <label for="totalGift">SI</label>
+            <label for="totalGift">{{yes}}</label>
         </div>
         <div class="text-checkbox" style="display: {{showPartialGift}};">
             <input id="partialGift" name="gift" type="radio" value="2"/>
-            <label for="partialGift">SOLO LOS PRODUCTOS</label>
+            <label for="partialGift">{{part}}</label>
         </div>
     </div>
 </div>
