--- a/src/apps/press/press.html
+++ b/src/apps/press/press.html
@@ -3,7 +3,7 @@
     {{newItem}}
     <div>{{item.fecha}}</div>
     <br/>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/es/en-los-medios/{{item.href}}&layout=button&size=large&mobile_iframe=false&appId=1950796945206063&width=96&height=28"
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href={{hostUrl}}/{{system.info.lang}}/en-los-medios/{{item.href}}&layout=button&size=large&mobile_iframe=false&appId=1950796945206063&width=96&height=28"
             width="96" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <br/>
     <img src="/google/drive/en-los-medios/{{system.deviceType}}.{{item.foto}}"
