--- a/web-app-deploy/seo/es/home.html
+++ b/web-app-deploy/seo/es/home.html
@@ -56,13 +56,19 @@
       "contactPoint": [{
         "@type": "ContactPoint",
         "telephone": "+34 951 131 460",
-        "contactType": "Calle Salitre, 11",
-        "areaServed": "ES"
+        "contactType": "customer service",
+        "areaServed": {
+            "@type":"place",
+            "address": "Calle Salitre, 11 - Malaga"
+        }
       },{
         "@type": "ContactPoint",
         "telephone": "+34 951 387 919",
-        "contactType": "Calle Compañia, 142",
-        "areaServed": "ES"
+        "contactType": "customer service",
+        "areaServed": {
+            "@type":"place",
+            "address": "Calle Puerta Buienaventura, 4 - Malaga"
+        }
       }],
       "logo": "https://www.inandoutbelleza.es/assets/images/manzana.png",
       "sameAs": [
@@ -86,7 +92,6 @@
     "latitude": 36.7137894,
     "longitude": -4.4268794
   },
-  "url": "https://www.inandoutbelleza.es",
   "telephone": "+34 951 387 919",
   "openingHoursSpecification": [
     {
@@ -108,8 +113,7 @@
       "closes": "14:30"
     }
   ],
-  "menu": "https://www.inandoutbelleza.es/assets/images/tarifa_de_precios.pdf",
-  "acceptsReservations": "True"
+  "priceRange": "€6 - €500"
     }
 
     </script>
