remove rx connect on object prototype && some improvements

--- a/src/apps/location/index.html
+++ b/src/apps/location/index.html
@@ -11,8 +11,12 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.365204032548!2d-4.429068084181276!3d36.71378937996639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f790f163b407%3A0xbee3ebf8e48a93d3!2sCalle+Salitre%2C+11%2C+29002+M%C3%A1laga!5e0!3m2!1sit!2ses!4v1511978401758"
                 width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         <a class="button clickable white-color green-bg-color fa fa-map"
-           href="http://maps.apple.com/?q={{location1Latitude}},{{location1Longitude}}">
+           href="https://maps.google.com/?cid=4510495158961889513">
             {{buttonText}}
+        </a>
+        <br/> <br/>
+        <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJB7Rj8ZD3cg0R6eAKD3N_mD4">
+            VALORA EN GOOGLE
         </a>
     </div>
     <div class="box">
@@ -27,8 +31,12 @@
                 width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 
         <a class="button clickable white-color green-bg-color fa fa-map"
-           href="http://maps.apple.com/?q={{location3Latitude}},{{location3Longitude}}">
+           href="https://maps.google.com/?cid=11428043934484266338">
             {{buttonText}}
+        </a>
+        <br/><br/>
+        <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4">
+            VALORA EN GOOGLE
         </a>
     </div>
 </div>
