--- a/src/apps/reviews/index.html
+++ b/src/apps/reviews/index.html
@@ -15,7 +15,14 @@
         <hr/>
     </div>
     <h3 class="box">{{starAverage}} <span #staraverage></span></h3>
-
+    <hr/>
+    <h4>VALORA EN GOOGLE</h4>
+    <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJB7Rj8ZD3cg0R6eAKD3N_mD4">
+        CALLE SALITRE
+    </a>
+    <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4">
+        CALLE BUENAVENTURA
+    </a>
     <h3>{{comments}}</h3>
     <div #reviews></div>
     <div #loading><img style="width: 33px" src="/assets/images/loading.gif" /></div>
