admin google review email

--- a/src/apps/reviews/index.html
+++ b/src/apps/reviews/index.html
@@ -19,10 +19,11 @@
     <h4>VALORA EN GOOGLE</h4>
     <a class="button clickable white-color green-bg-color fa fa-google"
        style="min-width: 120px"
-       target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJB7Rj8ZD3cg0R6eAKD3N_mD4">
+       target="_blank" href="{{location1GoogleReviewUrl}}">
         CALLE SALITRE
     </a>
-    <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4">
+    <a class="button clickable white-color green-bg-color fa fa-google" target="_blank"
+       href="{{location3GoogleReviewUrl}}">
         CALLE BUENAVENTURA
     </a>
     <h3>{{comments}}</h3>
