bonus cards on phone

--- a/src/apps/login/logged/logged.html
+++ b/src/apps/login/logged/logged.html
@@ -7,6 +7,15 @@
         {{logged.bookTitle}}
         <ul #appointments></ul>
     </div>
+    <div class="box">
+        <div>
+            MI TARJETA IN&OUT
+            <div style="text-align: center" #qrcode>
+
+            </div>
+            <ul #noqrcode></ul>
+        </div>
+    </div>
     <!--<div class="box">-->
         <!--MIS PEDIDOS:-->
         <!--<div #orders></div>-->
