--- a/src/apps/hours/index.html
+++ b/src/apps/hours/index.html
@@ -11,6 +11,12 @@
             <tr><td>{{day_5}}</td><td>10:00 - 20:00</td></tr>
             <tr><td>{{day_6}}</td><td>10:00 - 14:00</td></tr>
         </table>
+        <br/>
+        <div style="font-size:12px; color: #b95959;">
+            {{#each location1ExceptionalClosing}}
+                <div>{{closed}}: <em>{{this.date}}</em></div>
+            {{/each}}
+        </div>
     </div>
     <div class="box">
         {{location3Address}}
@@ -24,6 +30,11 @@
             <tr><td>{{day_5}}</td><td>10:00 - 20:00</td></tr>
             <tr><td>{{day_6}}</td><td>10:00 - 14:00</td></tr>
         </table>
-
+        <br/>
+        <div style="font-size: 12px; color: #b95959;">
+            {{#each location3ExceptionalClosing}}
+            <div>{{closed}}: <em>{{this.date}}</em></div>
+            {{/each}}
+        </div>
     </div>
 </div>
