--- a/src/apps/bonusCards/card.html
+++ b/src/apps/bonusCards/card.html
@@ -1,10 +1,11 @@
-<div class="box">
+<div class="box" style="background-color: {{card.bgColor}}">
     <h2 class="green-color">{{card.titulo}}</h2>
     {{newItem}}
     <p>{{card.descripcion}}</p>
     <ul #treatments></ul>
     <hr/>
-    <div>{{card.precio_texto}}</div>
+    <span style="text-decoration: {{card.textDecoration}};">{{card.price}}</span>
+    <span style="color: #daa520;display: {{card.showDiscount}}">{{card.discounted}}</span>
     <input onclick="this.form.add('{{card.identificador}}');"
            style="position: absolute;right: 9px;bottom: 5px; display:{{bookDisplay}};"
            class="clickable button green-bg-color white-color"
