--- a/src/apps/promotions/buyTpl.html
+++ b/src/apps/promotions/buyTpl.html
@@ -1,6 +1,6 @@
 <div>
     <div>{{price}}</div>
-    <input onclick="this.form.add('{{id}}');"
+    <input onclick='this.form.add({{ids}});'
            style="position: absolute;right: 9px;bottom: 5px;"
            class="clickable button green-bg-color white-color"
            type="button" value="{{addToCartButton}}" />
