--- a/src/apps/promotions/buyTpl.html
+++ b/src/apps/promotions/buyTpl.html
@@ -1,7 +1,7 @@
-<div>
-    <div>{{price}}</div>
+<div style="position:relative; font-size: 20px; padding-bottom: 10px;">
+<div>{{price}}</div>
     <input onclick='this.form.add({{ids}});'
-           style="position: absolute;right: 9px;bottom: 5px;"
+           style="position: absolute;right: 0px;bottom: 11px;"
            class="clickable button green-bg-color white-color"
            type="button" value="{{addToCartButton}}" />
 </div>
