--- a/src/apps/bonusCards/treatment.html
+++ b/src/apps/bonusCards/treatment.html
@@ -1,1 +1,3 @@
-<li>{{count}} {{treatmentsOf}} {{title}}</li>
+<li>{{count}} {{treatmentsOf}}
+    <a href="{{urls.treatments}}/{{href}}" onclick="window.navigate(this, event)">{{title}}</a>
+</li>
