--- a/src/public/cookies.html
+++ b/src/public/cookies.html
@@ -1,12 +1,9 @@
 <form>
-    <h1>Bievenido al nuevo sitio web de In&Out</h1>
-    <p>A partir de ahora podras:</p>
-    <h3>HACER COMPRAS ON-LINE</h3>
-    <h3>RESERVAR CITAS ON-LINE</h3>
+    <h1>Bievenido al sitio web de In&Out</h1>
     <hr style="width: 30%; margin: 0 auto"/>
-    <p>En In&Out utilizamos cookies, propias y de terceros, para mejorar su experiencia de usuario. Al navegar en esta web
-        aceptas su utilización</p>
+    <p>Utilizamos cookies propias y de terceros para mejorar nuestros servicios mediante el análisis de sus hábitos de navegación.
+        Puede cambiar la configuración y obtener más información <a href="/es/preguntas">aquí</a>.</p>
     <button type="button" class="clickable button green-bg-color white-color" onclick="this.form.cookieAccept()">
-        Acepto vuestra política de cookies
+        Aceptar
     </button>
 </form>
