--- a/web-app-deploy/seo/es/home.html
+++ b/web-app-deploy/seo/es/home.html
@@ -2,7 +2,7 @@
     <h1>In&Out centro de belleza en Malaga</h1>
     <nav>
         <a href="/es/tratamientos">TRATAMIENTOS</a>
-        <a href="/es/tarjetas">TARJETAS</a>
+        <a href="/es/tarjetas">BONOS</a>
         <a href="/es/productos">PRODUCTOS</a>
         <a href="/es/promociones">PROMOCIONES</a>
         <a href="/es/citas">CITAS</a>
