--- a/src/apps/treatments/treatment.html
+++ b/src/apps/treatments/treatment.html
@@ -16,10 +16,10 @@
             class="clickable button green-bg-color white-color"
             type="button" value="{{addToCartButton}}" />
     <input onclick="this.form.book('{{item.identificador}}');"
-            style="position: relative; bottom: -5px; display:{{bookDisplay}}; min-width: 100px"
+            style="position: relative; bottom: -5px; display:{{bookDisplay}}; min-width: 100px; "
             class="clickable button green-bg-color white-color"
             type="button" value="{{bookButton}}" />
-    <a style="position: absolute;right: 9px;bottom: 5px; display: {{callDisplay}};"
+    <a style="position: relative; bottom: -5px; display: {{callDisplay}}; width: 100px; min-width: 100px"
        href="tel:{{location1Phone}}"
             class="clickable button green-bg-color white-color">{{callUsButton}}</a>
 </div>
