--- a/src/apps/cart/cart-item.html
+++ b/src/apps/cart/cart-item.html
@@ -1,7 +1,7 @@
 <table>
     <tr style="display: {{typeTitleDisplay}}"><td colspan="3"><h4>{{typeTitle}}</h4></td></tr>
     <tr>
-        <td>{{item.title}}</td>
+        <td><a href="{{item.href}}" onclick="window.navigate(this, event)">{{item.title}}</a></td>
         <td width="90px">
             <input type="button" onclick="this.form.add('{{item.id}}', -1)"
                    class="button clickable green-bg-color white-color" style="min-width: 20px" value="-">
